<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Setting_Linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6E6C6C"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/blocks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="7dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/Name"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="50dp"
                android:background="#C5C1C1"
                android:hint="@string/Name"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C5C1C1"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="2dp" />-->

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/Surname" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="50dp"
                android:background="#C5C1C1"
                android:hint="@string/Surname"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:id="@+id/Surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C5C1C1"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="2dp" />-->

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/email" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="50dp"
                android:background="#C5C1C1"
                android:hint="@string/email"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C5C1C1"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="2dp" />-->

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/HintPassEng" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="50dp"
                android:background="#C5C1C1"
                android:hint="@string/HintPassEng"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C5C1C1"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="2dp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/lable_pay"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/Type_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="50dp"
            android:text="@string/Type_pay"
            android:textOff="@string/PayPass"
            android:textOn="@string/cash"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/ButtonSave"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="#FAB333"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            app:cardMaxElevation="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="150dp"
            android:background="@color/colorPrice"
            android:text="@string/ButtonSave"
            android:textColor="@color/colorTextButton"
            android:textSize="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/ButtonSave"
                android:textColor="#2F3887"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>

        <!--<Button
            android:id="@+id/ButtonSave"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="150dp"
            android:background="@color/colorPrice"
            android:text="@string/ButtonSave"
            android:textColor="@color/colorTextButton"
            android:textSize="20sp" />-->

    </LinearLayout>

</LinearLayout>