<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f3887">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="265dp"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        app:srcCompat="@drawable/registration" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:id="@+id/etUsername"
                android:hint="@string/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="textPersonName"
                android:layout_marginBottom="1dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:id="@+id/etUsername"
            android:hint="@string/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:id="@+id/etSurname"
                android:hint="@string/Surname"
                android:layout_width="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="textPersonName"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:id="@+id/etSurname"
            android:hint="@string/Surname"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:id="@+id/etEmail"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="1dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:id="@+id/etPassword"
                android:hint="@string/HintPassEng"
                android:layout_width="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:id="@+id/etPassword"
            android:hint="@string/HintPassEng"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/bRegister"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="#FAB333"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            app:cardMaxElevation="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/registerEng"
                android:textColor="#2F3887"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="#FAB333"
            android:layout_gravity="center_horizontal"
            android:text="@string/SignEng"/>

    </LinearLayout>

</RelativeLayout>